--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,16 +8,18 @@ on:
 # base image name, difficult to compute due to docker lowercase requirement
 env:
   IMAGE_NAME: ghcr.io/belaysoftware/belay-django
-  TAG: "python-3.10"
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: ["3.10", "3.11"]
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -27,8 +29,8 @@ jobs:
         run: |
           docker build \
             --tag ${{env.IMAGE_NAME}}:${{github.sha}} \
-            --tag ${{env.IMAGE_NAME}}:${{env.TAG}} \
-            --file Dockerfile \
+            --tag ${{env.IMAGE_NAME}}:python-${{matrix.version}} \
+            --file Dockerfile-${{matrix.version}} \
             .
       - name: Push Docker image
         if: github.event_name == 'push'
