--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,6 +18,12 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: "arm64,arm"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -27,7 +33,8 @@ jobs:
       - name: Build Docker image
         id: build
         run: |
-          docker build \
+          docker buildx build \
+            --platform=linux/arm64,linux/amd64 \
             --tag ${{env.IMAGE_NAME}}:${{github.sha}} \
             --tag ${{env.IMAGE_NAME}}:python-${{matrix.version}} \
             --file Dockerfile-${{matrix.version}} \
