--- a/Dockerfile-3.10
+++ b/Dockerfile-3.10
@@ -4,14 +4,8 @@ ENV TZ=America/Chicago
 ENV POETRY_VIRTUALENVS_CREATE=False
 ENV PYTHONUNBUFFERED=1
 
-ADD vendor/watchman/bin /usr/local/bin
-ADD vendor/watchman/lib /usr/local/lib
-RUN mkdir -p /usr/local/var/run/watchman && \
-    chmod 755 /usr/local/bin/watchman && \
-    chmod 2777 /usr/local/var/run/watchman
-
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends build-essential curl libpcre3 libpcre3-dev git mime-support ssh && \
+    apt-get install -y --no-install-recommends build-essential curl libpcre3 libpcre3-dev git mime-support ssh watchman && \
     pip install -U --no-cache-dir pip poetry uwsgi pywatchman && \
     rm -Rf /root/.cache && \
     apt-get remove -y build-essential libpcre3-dev && \
