Build psycopg2 into image

--- a/Dockerfile-3.10
+++ b/Dockerfile-3.10
@@ -5,9 +5,9 @@ ENV POETRY_VIRTUALENVS_CREATE=False
 ENV PYTHONUNBUFFERED=1
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends build-essential curl libpcre3 libpcre3-dev git mime-support ssh watchman && \
-    pip install -U --no-cache-dir pip poetry uwsgi pywatchman && \
+    apt-get install -y --no-install-recommends build-essential libpq-dev curl libpcre3 libpcre3-dev git mime-support ssh watchman && \
+    pip install -U --no-cache-dir pip poetry uwsgi pywatchman psycopg2 && \
     rm -Rf /root/.cache && \
-    apt-get remove -y build-essential libpcre3-dev && \
+    apt-get remove -y build-essential libpcre3-dev libpq-dev && \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/*
